<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.secretbiology.minimalquiz.activities.lobby.NewGame"
    tools:layout_editor_absoluteY="81dp">

    <FrameLayout
        android:id="@+id/ng_progress"
        android:layout_width="match_parent"
        android:layout_height="8sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical">

            <ProgressBar
                android:id="@+id/ng_progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminate="true" />
        </FrameLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/ng_warning"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:background="@android:color/holo_red_light"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4sp"
            android:layout_marginStart="4sp"
            android:layout_weight="0.7"
            android:text="@string/proxy_warning"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/ng_dismiss_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/dismiss" />

    </LinearLayout>


    <Button
        android:id="@+id/ng_single_player"
        style="@style/ColoredButton"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:text="@string/single_player"
        app:layout_constraintBottom_toTopOf="@+id/ng_no_of_questions"
        app:layout_constraintEnd_toStartOf="@+id/ng_multi_player"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/ng_multi_player"
        style="@style/ColoredButton"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:text="@string/multi_player"
        app:layout_constraintBottom_toBottomOf="@+id/ng_single_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ng_single_player"
        app:layout_constraintTop_toTopOf="@+id/ng_single_player" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/game_settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@+id/ng_database"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ng_warning"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8sp"
        android:text="@string/game_type"
        app:layout_constraintBottom_toTopOf="@+id/ng_single_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ng_cat" />

    <TextView
        android:id="@+id/ng_no_of_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8sp"
        android:text="@string/no_of_questions"
        app:layout_constraintBottom_toTopOf="@+id/ng_seekbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ng_single_player" />

    <TextView
        android:id="@+id/ng_time_per_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8sp"
        android:text="@string/time_per_question"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/ng_time1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ng_seekbar" />

    <SeekBar
        android:id="@+id/ng_seekbar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:max="15"
        android:progress="1"
        app:layout_constraintBottom_toTopOf="@+id/ng_time_per_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ng_no_of_questions" />

    <Button
        android:id="@+id/ng_time1"
        style="@style/ColoredButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10 sec"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ng_time2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ng_time_per_question" />

    <Button
        android:id="@+id/ng_time2"
        style="@style/ColoredButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="15 sec"
        app:layout_constraintBottom_toBottomOf="@+id/ng_time1"
        app:layout_constraintEnd_toStartOf="@+id/ng_time3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ng_time1"
        app:layout_constraintTop_toTopOf="@+id/ng_time1" />

    <Button
        android:id="@+id/ng_time3"
        style="@style/ColoredButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="30 sec"
        app:layout_constraintBottom_toBottomOf="@+id/ng_time2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ng_time2"
        app:layout_constraintTop_toTopOf="@+id/ng_time2" />

    <Button
        android:id="@+id/ng_start"
        style="@style/ColoredButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ng_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8sp"
        android:text="@string/select_category"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/ng_cat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/ng_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/category"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ng_database" />
</android.support.constraint.ConstraintLayout>
