<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hm_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.secretbiology.minimalquiz.Home">

    <Button
        android:id="@+id/hm_new_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:background="@color/colorPrimary"
        android:text="@string/new_game"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hm_join_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/hm_join_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:background="@color/colorPrimary"
        android:text="@string/join_game"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/hm_new_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/hm_new_btn"
        app:layout_constraintTop_toTopOf="@+id/hm_new_btn" />

    <LinearLayout
        android:id="@+id/hm_warning"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:background="@android:color/holo_red_light"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4sp"
            android:layout_marginStart="4sp"
            android:layout_weight="0.7"
            android:text="@string/proxy_warning"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/hm_dismiss_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/dismiss" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Beta testing for Single Player is now open.\nCurrently only supports \'OpenDB\' database. "
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/hm_new_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
