<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.secretbiology.minimalquiz.activities.game.SinglePlayer">

    <ImageView
        android:id="@+id/sp_header_back"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:src="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/sp_dp_card"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:elevation="0sp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="@id/sp_header_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp_header_back">

        <ImageView
            android:id="@+id/sp_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8sp"
            android:src="@drawable/face_fox" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/sp_dp_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Random Player"
        app:layout_constraintStart_toEndOf="@+id/sp_dp_card"
        app:layout_constraintTop_toBottomOf="@+id/sp_header_back" />


    <FrameLayout
        android:id="@+id/sp_frame"
        android:layout_width="match_parent"
        android:layout_height="8sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical">

            <ProgressBar
                android:id="@+id/sp_game_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/sp_progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:alpha="0.6"
        android:text="@string/game_progress"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/sp_dp_name"
        app:layout_constraintStart_toEndOf="@+id/sp_dp_card" />

    <TextView
        android:id="@+id/sp_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="10"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/sp_header_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_header_back" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:alpha="0.7"
        android:text="@string/category"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@id/sp_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sp_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="music"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/sp_question_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/sp_question_card"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32sp"
        android:layout_marginStart="32sp"
        app:layout_constraintBottom_toTopOf="@id/sp_cancel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp_dp_card">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sp_question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/sp_recycler"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/sp_recycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8sp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sp_question" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/sp_next_btn"
        style="@style/ColoredButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@+id/sp_cancel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sp_cancel_btn"
        app:layout_constraintTop_toTopOf="@+id/sp_cancel_btn" />

    <Button
        android:id="@+id/sp_cancel_btn"
        style="@style/ColoredButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sp_next_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sp_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:alpha="0.7"
        android:text="@string/time_left"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/sp_header_back"
        app:layout_constraintEnd_toStartOf="@+id/sp_score"
        app:layout_constraintStart_toEndOf="@+id/sp_progress_text" />
</android.support.constraint.ConstraintLayout>
